--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ section{
         right: -100%;
         width: 200px;
         height: 180px;
-        background-color: #d0a16ecc;
+        background-color: #d0a16e;
         display: flex;
         flex-direction: column;
         align-items: center;
